# vdm-ai-dubbing

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
.github/: copilot-instructions.md
C4-Documentation/: .env.example  IMPLEMENTATION-PLAN.md  README.md  c4-code-docs-examples.md  c4-component-downloader.md  c4-component-dubber.md  c4-component-gateway.md  c4-component-muxer.md  c4-component-queue.md  c4-component-storage.md  c4-component-web-ui.md  c4-component.md  c4-container.md  c4-context.md  docker-compose.example.yml
C4-Documentation/apis/: gateway-api.yaml
downloader/: Dockerfile  pyproject.toml
downloader/src/: __init__.py  config.py  downloader.py  events.py  main.py  types.py
dubber/: Dockerfile  package-lock.json  package.json  tsconfig.json
dubber/src/: audio-extractor.ts  config.ts  dubber.ts  events.ts  main.ts  types.ts
e2e/: package.json
e2e/tests/: api.test.js
gateway/: Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
gateway/migrations/: 001_initial.sql  002_add_use_lively_voice.sql
gateway/src/: config.ts  server.ts
gateway/src/__tests__/: auth.test.ts  jobs.test.ts  setup.ts
gateway/src/db/: database.ts  jobs.ts  migrate.ts  seed.ts  users.ts
gateway/src/queue/: client.ts
gateway/src/routes/: auth.ts  health.ts  jobs.ts
gateway/src/websocket/: server.ts
gateway/types/: index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts
muxer/: Dockerfile  pyproject.toml
muxer/src/: __init__.py  config.py  events.py  main.py  muxer.py  types.py
shared/types/: index.d.ts  index.d.ts.map  index.js  index.ts
web-ui/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  index.css  main.tsx
web-ui/src/components/: AddJobDialog.tsx  Header.tsx  JobDetail.tsx  JobItem.tsx  JobList.tsx  LoginForm.tsx  ProgressBar.tsx  StatusBadge.tsx  index.ts
web-ui/src/services/: api.ts  notification.ts  socket.ts
web-ui/src/store/: authStore.ts  jobStore.ts
web-ui/src/theme/: themeConfig.ts
web-ui/src/types/: index.ts
