[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vdm-downloader"
version = "1.0.0"
description = "Download worker for Video Download Manager - uses yt-dlp to download videos"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "VDM Team" }
]

dependencies = [
    "yt-dlp[default]>=2024.12.13",
    "redis>=5.0.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
