[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vdm-muxer"
version = "1.0.0"
description = "Muxing worker for Video Download Manager - mixes audio tracks with FFmpeg"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "VDM Team" }
]

dependencies = [
    "redis>=5.0.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
